@@ -5,12 +5,18 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 01:27:56 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 01:36:05 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
   <description>RIIZE成員昇瀚將於下月回歸SM娛樂宣布RIIZE成員昇瀚將於下月回歸樂團將重新組成七人團體該公司發表了一份聲明解釋樂團最初計劃為七人團體以及昇瀚對過去一年多的爭議事件深感懺悔昇瀚於一年前因爭議事件而暫停活動在聲明發表後他上...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 01:27:56 +0800</pubDate>
+</item><item>
+  <title>韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩</title>
+  <link>https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html</link>
+  <description>樂隊熱潮席捲韓國音樂界韓國音樂榜單最近被樂隊統治尤其是JYP娛樂的流行搖滾樂隊DAY6韓語데이식스截至上週五DAY6的四首舊曲和新曲均躋身Melon音樂榜單前十名其中Happy和WelcometotheShow分別占據第一和第三名MeltDown和TimeofOurLife分別排名第四和第六DAY6並非新晉樂隊但自2015年出道以來九年過去現...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 01:36:05 +0800</pubDate>
 </item></channel>
 </rss>
