@@ -1,0 +1,255 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u570b\u6a02\u968a\u71b1\u6f6e\u4f86\u8972\uff01DAY6\u548cQWER\u7b49\u6a02\u968a\u5e2d\u6372\u97f3\u6a02\u699c\u55ae\uff0c\u7368\u7acb\u6a02\u968a\u4e5f\u5927\u653e\u7570\u5f69", "description": "\u97d3\u570b\u6a02\u968a\u71b1\u6f6e\u4f86\u8972\uff01DAY6\u548cQWER\u7b49\u6a02\u968a\u5e2d\u6372\u97f3\u6a02\u699c\u55ae\uff0c\u7368\u7acb\u6a02\u968a\u4e5f\u5927\u653e\u7570\u5f69", "url": "https://www.famechos.me/news/\u97d3\u570b\u6a02\u968a\u71b1\u6f6e\u4f86\u8972\uff01DAY6\u548cQWER\u7b49\u6a02\u968a\u5e2d\u6372\u97f3\u6a02\u699c\u55ae\uff0c\u7368\u7acb\u6a02\u968a\u4e5f\u5927\u653e\u7570\u5f69.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T01:35:57.912245+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html"/>
+<meta name="description" content="韓國樂隊熱潮席捲音樂榜單！DAY6、QWER等人氣樂隊與獨立樂隊同台競技，音樂迷大飽耳福！">
+<meta name="keywords" content="韓國樂隊，DAY6，QWER，獨立樂隊，音樂榜單，K-POP，韓國音樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html" />
+        <meta property="og:title" content="韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩" />
+        <meta property="og:description" content="韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩" />
+        <meta property="twitter:description" content="韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>韓國音樂榜單最近被樂隊統治，尤其是JYP娛樂的流行搖滾樂隊DAY6（韓語：데이식스）。截至上週五，DAY6的四首舊曲和新曲均躋身Melon音樂榜單前十名，其中《Happy》和《Welcome to the Show》分別占據第一和第三名，《Melt Down》和《Time of Our Life》分別排名第四和第六。</p>
+<p>DAY6並非新晉樂隊，但自2015年出道以來，九年過去，現在才達到如此高度。雖然DAY6一直受到當地音樂愛好者的喜愛，但這是第一次獲得如此廣泛的主流認可。</p>
+<p>在全女班樂隊中，四人樂隊QWER（韓語：큐더블유이알）正在搖滾樂界領先。QWER的第二張EP《算法之花》（Algorithm's Blossom）於9月23日發行，其中的《My Name is Malgeum》目前在Melon榜單排名第二，超越了aespa的《Supernova》和NewJeans的《How Sweet》。</p>
+<p>樂隊受歡迎的主要原因似乎是人們對K-pop偶像團體典型的高能量、上癮的hook感到厭倦。相比之下，樂隊的音樂被認為更容易聆聽。</p>
+<p>音樂評論家林熙允表示：「目前流行的樂隊音樂遵循傳統的旋律結構，使聽眾自然感受到歌曲的情感輪廓。這是一種熟悉的模式，長期以來一直被認為能夠引起樂趣。」</p>
+<p>DAY6的歌曲，例如《Time of Our Life》，採用熟悉的、朗朗上口的旋律，並結合了普遍相關的歌詞，例如「讓我們一起寫下美麗的青春篇章」。</p>
+<p>音樂評論家金道憲表示：「DAY6的歌曲不傳達激進的信息或複雜的主題。相反，它們被視為疲憊一代的頌歌。由於成員積極參與寫作和作曲，他們的真實性得到了更多的喜愛。」</p>
+<p>日本次文化和動畫內容也影響了樂隊在韓國的受歡迎程度。當地樂隊經常採用類似於日本搖滾樂隊的編曲和旋律，這些樂隊創作動畫配樂。</p><h2>韓國獨立樂隊受歡迎程度激增</h2>
+<p>近年來，韓國樂隊的音樂風格出現了一個有趣的趨勢。林熙允指出，日本動畫電影《灌籃高手THE FIRST SLAM DUNK》和《鈴芽之旅》的受歡迎似乎影響了韓國樂隊的音樂。這些電影中年輕的激情和能量，結合其獨特的、清新的形象，經常伴隨著搖滾音樂，促成了這種趨勢。</p>
+<p>韓國獨立樂隊也經歷了受歡迎程度的激增。實力卡膠（Silica Gel）就是一個例子，他們在5月份在首爾的獎忠體育館舉辦了三場售罄的演唱會，這是即使受歡迎的K-pop團體也很少能夠實現的壯舉。實力卡膠僅憑藉其音樂就成為了一支令人矚目的樂隊；該樂隊不參加電視節目，這通常是地下音樂家走向明星的最快途徑。</p>
+<p>另一支獨立樂隊Wave to Earth目前在Spotify上擁有超過819萬的月度聽眾，這個數字是IU的530萬的1.5倍。IU是當今最成功的女性K-pop獨唱歌手之一。</p>
+<p>林熙允表示，社交媒體上的短視頻幫助獨立音樂家在樂隊界獲得了巨大的受歡迎。小眾樂隊音樂的粉絲群體隨著內容在欣賞非主流聲音的愛好者之間分享而迅速擴大。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ViDjwX-yfgc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html">KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
