@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 01:31:57 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 01:36:05 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -19,5 +19,11 @@
   <description>東京活動（2024年9月30日至10月6日） 。東京的秋季煙火大會和海燈節即將點亮夜空。Salsa Street歡迎舞蹈愛好者，東京迪士尼度假區也正在為萬聖節做準備。。。多摩川煙火大會</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 01:31:57 +0800</pubDate>
+</item><item>
+  <title>韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩</title>
+  <link>https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html</link>
+  <description>樂隊熱潮席捲韓國音樂界韓國音樂榜單最近被樂隊統治尤其是JYP娛樂的流行搖滾樂隊DAY6韓語데이식스截至上週五DAY6的四首舊曲和新曲均躋身Melon音樂榜單前十名其中Happy和WelcometotheShow分別占據第一和第三名MeltDown和TimeofOurLife分別排名第四和第六DAY6並非新晉樂隊但自2015年出道以來九年過去現...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 01:36:05 +0800</pubDate>
 </item></channel>
 </rss>
