@@ -20,4 +20,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T01:36:05+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
